--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.2.2
   move_to_background: ^1.0.2
+  numberpicker: ^2.1.2
+  restart_app: ^1.2.1
 
 dev_dependencies:
   flutter_test:
